--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,19 +1,82 @@
-format = "$all"
-scan_timeout = 0
-command_timeout = 0
+"$schema" = 'https://starship.rs/config-schema.json'
+format = '$all'
+right_format = ''
+continuation_prompt = '[∙](bright-black) '
+scan_timeout = 30
+command_timeout = 500
 add_newline = false
 
 [aws]
-format = 'on [$symbol($profile )(\($region\) )]($style)'
+format = 'on [$symbol($profile )(\($region\) )(\[$duration\] )]($style)'
 symbol = '☁️  '
 style = 'bold yellow'
-disabled = false
+disabled = true
+expiration_symbol = 'X'
+force_display = false
 
 [aws.region_aliases]
 
+[aws.profile_aliases]
+
+[azure]
+format = 'on [$symbol($subscription)]($style) '
+symbol = 'ﴃ '
+style = 'blue bold'
+disabled = true
+
 [battery]
+full_symbol = ' '
+charging_symbol = ' '
+discharging_symbol = ' '
+unknown_symbol = ' '
+empty_symbol = ' '
+disabled = false
+format = '[$symbol$percentage]($style) '
+
+[[battery.display]]
 threshold = 10
 style = 'red bold'
+
+[buf]
+format = 'with [$symbol ($version)]($style)'
+version_format = 'v${raw}'
+symbol = ''
+style = 'bold blue'
+disabled = false
+detect_extensions = []
+detect_files = [
+    'buf.yaml',
+    'buf.gen.yaml',
+    'buf.work.yaml',
+]
+detect_folders = []
+
+[c]
+format = 'via [$symbol($version(-$name) )]($style)'
+version_format = 'v${raw}'
+style = '149 bold'
+symbol = 'C '
+disabled = false
+detect_extensions = [
+    'c',
+    'h',
+]
+detect_files = []
+detect_folders = []
+commands = [
+    [
+    'cc',
+    '--version',
+],
+    [
+    'gcc',
+    '--version',
+],
+    [
+    'clang',
+    '--version',
+],
+]
 
 [character]
 format = '$symbol '
@@ -24,6 +87,7 @@ disabled = false
 
 [cmake]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '△ '
 style = 'bold blue'
 disabled = false
@@ -43,6 +107,21 @@ disabled = false
 show_notifications = false
 min_time_to_notify = 45000
 
+[cobol]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
+symbol = '⚙️ '
+style = 'bold blue'
+disabled = false
+detect_extensions = [
+    'cbl',
+    'cob',
+    'CBL',
+    'COB',
+]
+detect_files = []
+detect_folders = []
+
 [conda]
 truncation_length = 1
 format = 'via [$symbol$environment]($style) '
@@ -51,8 +130,15 @@ style = 'green bold'
 ignore_base = true
 disabled = false
 
+[container]
+format = '[$symbol \[$name\]]($style) '
+symbol = '⬢'
+style = 'red bold dimmed'
+disabled = false
+
 [crystal]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🔮 '
 style = 'bold red'
 disabled = false
@@ -62,6 +148,7 @@ detect_folders = []
 
 [dart]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🎯 '
 style = 'bold blue'
 disabled = false
@@ -75,11 +162,14 @@ detect_folders = ['.dart_tool']
 
 [deno]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🦕 '
 style = 'green bold'
 disabled = false
 detect_extensions = []
 detect_files = [
+    'deno.json',
+    'deno.jsonc',
     'mod.ts',
     'deps.ts',
     'mod.js',
@@ -93,12 +183,14 @@ truncate_to_repo = true
 fish_style_pwd_dir_length = 0
 use_logical_path = true
 format = '[$path]($style)[$read_only]($read_only_style) '
+repo_root_format = '[$before_root_path]($style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) '
 style = 'cyan bold'
 disabled = false
 read_only = '🔒'
 read_only_style = 'red'
 truncation_symbol = ''
 home_symbol = '~'
+use_os_path_sep = true
 
 [directory.substitutions]
 
@@ -117,13 +209,13 @@ detect_files = [
 detect_folders = []
 
 [dotnet]
-format = '[$symbol($version )(🎯 $tfm )]($style)'
+format = 'via [$symbol($version )(🎯 $tfm )]($style)'
+version_format = 'v${raw}'
 symbol = '.NET '
 style = 'blue bold'
 heuristic = true
 disabled = false
 detect_extensions = [
-    'sln',
     'csproj',
     'fsproj',
     'xproj',
@@ -139,6 +231,7 @@ detect_folders = []
 
 [elixir]
 format = 'via [$symbol($version \(OTP $otp_version\) )]($style)'
+version_format = 'v${raw}'
 symbol = '💧 '
 style = 'bold purple'
 disabled = false
@@ -148,6 +241,7 @@ detect_folders = []
 
 [elm]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🌳 '
 style = 'cyan bold'
 disabled = false
@@ -160,13 +254,10 @@ detect_files = [
 detect_folders = ['elm-stuff']
 
 [env_var]
-symbol = ''
-style = 'black bold dimmed'
-format = 'with [$env_value]($style) '
-disabled = false
 
 [erlang]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = ' '
 style = 'bold red'
 disabled = false
@@ -177,22 +268,30 @@ detect_files = [
 ]
 detect_folders = []
 
+[fill]
+style = 'bold black'
+symbol = '.'
+disabled = false
+
 [gcloud]
-format = 'on [$symbol$account(\($region\))]($style) '
-symbol = '☁️ '
+format = 'on [$symbol$account(@$domain)(\($region\))]($style) '
+symbol = '☁️  '
 style = 'bold blue'
 disabled = false
 
 [gcloud.region_aliases]
 
+[gcloud.project_aliases]
+
 [git_branch]
-format = 'on [$symbol$branch]($style)(:[$remote]($style)) '
+format = 'on [$symbol$branch(:$remote_branch)]($style) '
 symbol = ' '
 style = 'bold purple'
 truncation_length = 9223372036854775807
 truncation_symbol = '…'
 only_attached = false
 always_show_remote = false
+ignore_branches = []
 disabled = false
 
 [git_commit]
@@ -201,8 +300,15 @@ format = '[\($hash$tag\)]($style) '
 style = 'green bold'
 only_detached = true
 disabled = false
-tag_symbol = '🏷  '
+tag_symbol = ' 🏷  '
 tag_disabled = true
+
+[git_metrics]
+added_style = 'bold green'
+deleted_style = 'bold red'
+only_nonzero_diffs = true
+format = '([+$added]($added_style) )([-$deleted]($deleted_style) )'
+disabled = true
 
 [git_state]
 rebase = 'REBASING'
@@ -222,6 +328,7 @@ style = 'red bold'
 stashed = '\$'
 ahead = '⇡'
 behind = '⇣'
+up_to_date = ''
 diverged = '⇕'
 conflicted = '='
 deleted = '✘'
@@ -229,10 +336,12 @@ renamed = '»'
 modified = '!'
 staged = '+'
 untracked = '?'
+ignore_submodules = false
 disabled = false
 
 [golang]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🐹 '
 style = 'bold cyan'
 disabled = false
@@ -247,8 +356,26 @@ detect_files = [
 ]
 detect_folders = ['Godeps']
 
+[haskell]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
+symbol = 'λ '
+style = 'bold purple'
+disabled = false
+detect_extensions = [
+    'hs',
+    'cabal',
+    'hs-boot',
+]
+detect_files = [
+    'stack.yaml',
+    'cabal.project',
+]
+detect_folders = []
+
 [helm]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '⎈ '
 style = 'bold white'
 disabled = false
@@ -301,6 +428,8 @@ detect_folders = []
 
 [jobs]
 threshold = 1
+symbol_threshold = 1
+number_threshold = 2
 format = '[$symbol$number]($style) '
 symbol = '✦'
 style = 'bold blue'
@@ -308,6 +437,7 @@ disabled = false
 
 [julia]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = 'ஃ '
 style = 'bold purple'
 disabled = false
@@ -320,6 +450,7 @@ detect_folders = []
 
 [kotlin]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🅺 '
 style = 'bold blue'
 kotlin_binary = 'kotlin'
@@ -339,8 +470,18 @@ disabled = true
 
 [kubernetes.context_aliases]
 
+[line_break]
+disabled = false
+
+[localip]
+ssh_only = true
+format = '[$localipv4]($style) '
+style = 'yellow bold'
+disabled = true
+
 [lua]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🌙 '
 style = 'bold blue'
 lua_binary = 'lua'
@@ -358,6 +499,7 @@ disabled = false
 
 [nim]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '👑 '
 style = 'yellow bold'
 disabled = false
@@ -380,7 +522,7 @@ disabled = false
 [nodejs]
 format = 'via [$symbol($version )]($style)'
 version_format = 'v${raw}'
-symbol = ' '
+symbol = ' '
 style = 'bold green'
 disabled = false
 not_capable_style = 'bold red'
@@ -389,6 +531,8 @@ detect_extensions = [
     'mjs',
     'cjs',
     'ts',
+    'mts',
+    'cts',
 ]
 detect_files = [
     'package.json',
@@ -398,9 +542,10 @@ detect_files = [
 detect_folders = ['node_modules']
 
 [ocaml]
+format = 'via [$symbol($version )(\($switch_indicator$switch_name\) )]($style)'
+version_format = 'v${raw}'
 global_switch_indicator = ''
 local_switch_indicator = '*'
-format = 'via [$symbol($version )(\($switch_indicator$switch_name\) )]($style)'
 symbol = '🐫 '
 style = 'bold yellow'
 disabled = false
@@ -435,11 +580,13 @@ symbol = '📦 '
 style = '208 bold'
 display_private = false
 disabled = false
+version_format = 'v${raw}'
 
 [perl]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🐪 '
 style = '149 bold'
-format = 'via [$symbol($version )]($style)'
 disabled = false
 detect_extensions = [
     'pl',
@@ -458,9 +605,10 @@ detect_files = [
 detect_folders = []
 
 [php]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🐘 '
 style = '147 bold'
-format = 'via [$symbol($version )]($style)'
 disabled = false
 detect_extensions = ['php']
 detect_files = [
@@ -469,8 +617,16 @@ detect_files = [
 ]
 detect_folders = []
 
+[pulumi]
+format = 'via [$symbol($username@)$stack]($style) '
+version_format = 'v${raw}'
+symbol = ' '
+style = 'bold 5'
+disabled = false
+
 [purescript]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '<=> '
 style = 'bold white'
 disabled = false
@@ -505,6 +661,7 @@ detect_folders = []
 
 [red]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🔺 '
 style = 'red bold'
 disabled = false
@@ -514,6 +671,22 @@ detect_extensions = [
 ]
 detect_files = []
 detect_folders = []
+
+[rlang]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
+style = 'blue bold'
+symbol = '📐 '
+disabled = false
+detect_extensions = [
+    'R',
+    'Rd',
+    'Rmd',
+    'Rproj',
+    'Rsx',
+]
+detect_files = ['.Rprofile']
+detect_folders = ['.Rproj.user']
 
 [ruby]
 format = 'via [$symbol($version )]($style)'
@@ -527,6 +700,10 @@ detect_files = [
     '.ruby-version',
 ]
 detect_folders = []
+detect_variables = [
+    'RUBY_VERSION',
+    'RBENV_VERSION',
+]
 
 [rust]
 format = 'via [$symbol($version )]($style)'
@@ -539,8 +716,9 @@ detect_files = ['Cargo.toml']
 detect_folders = []
 
 [scala]
-disabled = false
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
+disabled = false
 style = 'red bold'
 symbol = '🆂 '
 detect_extensions = [
@@ -555,7 +733,7 @@ detect_files = [
 detect_folders = ['.metals']
 
 [shell]
-format = '$indicator '
+format = '[$indicator]($style) '
 bash_indicator = 'bsh'
 fish_indicator = 'fsh'
 zsh_indicator = 'zsh'
@@ -563,6 +741,11 @@ powershell_indicator = 'psh'
 ion_indicator = 'ion'
 elvish_indicator = 'esh'
 tcsh_indicator = 'tsh'
+nu_indicator = 'nu'
+xonsh_indicator = 'xsh'
+cmd_indicator = 'cmd'
+unknown_indicator = ''
+style = 'white bold'
 disabled = true
 
 [shlvl]
@@ -579,9 +762,17 @@ format = '[$symbol\[$env\]]($style) '
 style = 'blue bold dimmed'
 disabled = false
 
+[spack]
+truncation_length = 1
+format = 'via [$symbol$environment]($style) '
+symbol = '🅢 '
+style = 'blue bold'
+disabled = false
+
 [status]
 format = '[$symbol$status]($style) '
 symbol = '✖'
+success_symbol = ''
 not_executable_symbol = '🚫'
 not_found_symbol = '🔍'
 sigint_symbol = '🧱'
@@ -589,10 +780,21 @@ signal_symbol = '⚡'
 style = 'bold red'
 map_symbol = false
 recognize_signal_code = true
+pipestatus = false
+pipestatus_separator = '|'
+pipestatus_format = '\[$pipestatus\] => [$symbol$common_meaning$signal_name$maybe_int]($style)'
+disabled = false
+
+[sudo]
+format = '[as $symbol]($style)'
+symbol = '🧙 '
+style = 'bold blue'
+allow_windows = false
 disabled = true
 
 [swift]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '🐦 '
 style = 'bold 202'
 disabled = false
@@ -602,12 +804,14 @@ detect_folders = []
 
 [terraform]
 format = 'via [$symbol$workspace]($style) '
+version_format = 'v${raw}'
 symbol = '💠 '
 style = 'bold 105'
 disabled = false
 detect_extensions = [
     'tf',
-    'hcl',
+    'tfplan',
+    'tfstate',
 ]
 detect_files = []
 detect_folders = ['.terraform']
@@ -624,11 +828,12 @@ time_range = '-'
 format = '[$user]($style) in '
 style_root = 'red bold'
 style_user = 'yellow bold'
-show_always = true
+show_always = false
 disabled = false
 
 [vagrant]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '⍱ '
 style = 'cyan bold'
 disabled = false
@@ -636,8 +841,29 @@ detect_extensions = []
 detect_files = ['Vagrantfile']
 detect_folders = []
 
+[vcsh]
+symbol = ''
+style = 'bold yellow'
+format = 'vcsh [$symbol$repo]($style) '
+disabled = false
+
+[vlang]
+format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
+symbol = 'V '
+style = 'blue bold'
+disabled = false
+detect_extensions = ['v']
+detect_files = [
+    'v.mod',
+    'vpkg.json',
+    '.vpkg-lock.json',
+]
+detect_folders = []
+
 [zig]
 format = 'via [$symbol($version )]($style)'
+version_format = 'v${raw}'
 symbol = '↯ '
 style = 'bold yellow'
 disabled = false
