--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
 setw -g automatic-rename on   # rename window to reflect current program
-set -g renumber-windows on    # renumber windows when a window is closed
+set -g renumber-windows off   # do not renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
 
