--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,19 +1,23 @@
 [Settings]
-gtk-application-prefer-dark-theme=0
+gtk-application-prefer-dark-theme=1
 gtk-button-images=0
-gtk-cursor-theme-name=Xcursor-breeze
-gtk-enable-event-sounds=0
+gtk-cursor-theme-name=capitaine-cursors
+gtk-cursor-theme-size=24
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
-gtk-fallback-icon-theme=Paper
-gtk-font-name=Hack Nerd Font 11
-gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=FiraCode Nerd Font Mono,  11
+gtk-icon-theme-name=breeze-dark
 gtk-menu-images=0
-gtk-recent-files-limit=0
-gtk-recent-files-max-age=0
-gtk-theme-name=Matcha-dark-azul
-gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
+gtk-primary-button-warps-slider=true
+gtk-sound-theme-name=ocean
+gtk-theme-name=Orchis-Dark
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-style=3
 gtk-xft-antialias=1
+gtk-xft-dpi=98304
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
