--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -13,6 +13,7 @@
     "custom/brightness",
     "pulseaudio",
     "clock",
+    "tray",
   ],
   "hyprland/workspaces": {
     "format": " {icon} ",
