--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ exec-once = swaync
 exec-once = fcitx5 -d  --replace
 exec-once = udiskie &
 exec-once = nm-applet &
+exec-once = dropbox
 
 
 #############################
@@ -325,9 +326,11 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 windowrule = workspace 1 silent, class:^(com.mitchellh.ghostty)$
 windowrule = workspace 2 silent, class:^(org.gnome.Nautilus)$
+windowrule = workspace 3 silent, class:^(org.telegram.desktop)$
 windowrule = workspace 6 silent, class:^(vlc)$
 windowrule = workspace 7 silent, class:^(discord)$
 windowrule = workspace 8 silent, class:^(Spotify)$
 windowrule = workspace 9 silent, class:^(steam)$
 windowrule = workspace 10 silent, class:^(firefox)$
+windowrule = workspace 10 silent, class:^(Brave-browser)$
 windowrule = workspace 10 silent, class:^(Google-chrome)$
