--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
+# https://wiki.hypr.land/Configuring/
 
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
@@ -15,7 +15,7 @@ source=~/.config/hypr/mocha.conf
 ### MONITORS ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
+# See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
 
@@ -23,7 +23,7 @@ monitor=,preferred,auto,auto
 ### MY PROGRAMS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
+# See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
 $terminal = ghostty
@@ -55,7 +55,7 @@ exec-once = dropbox
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
+# See https://wiki.hypr.land/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -65,44 +65,46 @@ env = HYPRCURSOR_SIZE,24
 ### PERMISSIONS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Permissions/
+# See https://wiki.hypr.land/Configuring/Permissions/
+# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
+# for security reasons
 
 # ecosystem {
 #   enforce_permissions = 1
 # }
 
-
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
+# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
 #####################
 ### LOOK AND FEEL ###
 #####################
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
+# Refer to https://wiki.hypr.land/Configuring/Variables/
 
-# https://wiki.hyprland.org/Configuring/Variables/#general
+# https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
     gaps_out = 20
 
     border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = $teal $sapphire 45deg
     col.inactive_border = $surface2
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+# https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     rounding_power = 2
@@ -118,7 +120,7 @@ decoration {
         color = rgba(1a1a1aee)
     }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
@@ -128,37 +130,40 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+# https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
+    #        NAME,           X0,   Y0,   X1,   Y1
+    bezier = easeOutQuint,   0.23, 1,    0.32, 1
+    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
+    bezier = linear,         0,    0,    1,    1
+    bezier = almostLinear,   0.5,  0.5,  0.75, 1
+    bezier = quick,          0.15, 0,    0.1,  1
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint,popin
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, slide
-    animation = workspacesIn, 1, 1.21, almostLinear, slide
-    animation = workspacesOut, 1, 1.94, almostLinear, slide
+    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
+    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
+    animation = global,        1,     10,    default
+    animation = border,        1,     5.39,  easeOutQuint
+    animation = windows,       1,     4.79,  easeOutQuint, popin
+    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
+    animation = windowsOut,    1,     1.49,  linear,       popin 87%
+    animation = fadeIn,        1,     1.73,  almostLinear
+    animation = fadeOut,       1,     1.46,  almostLinear
+    animation = fade,          1,     3.03,  quick
+    animation = layers,        1,     3.81,  easeOutQuint
+    animation = layersIn,      1,     4,     easeOutQuint, fade
+    animation = layersOut,     1,     1.5,   linear,       fade
+    animation = fadeLayersIn,  1,     1.79,  almostLinear
+    animation = fadeLayersOut, 1,     1.39,  almostLinear
+    animation = workspaces,    1,     1.94,  almostLinear, slide
+    animation = workspacesIn,  1,     1.21,  almostLinear, slide
+    animation = workspacesOut, 1,     1.94,  almostLinear, slide
+    animation = zoomFactor,    1,     7,     quick
 }
 
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
+# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
@@ -168,18 +173,18 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
+# https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     focus_on_activate = true
@@ -191,7 +196,7 @@ misc {
 ### INPUT ###
 #############
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
+# https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us
     kb_variant =
@@ -211,13 +216,11 @@ input {
     repeat_delay = 300
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# See https://wiki.hypr.land/Configuring/Gestures
+gesture = 3, horizontal, workspace
 
 # Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
@@ -228,10 +231,10 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
+# See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, RETURN, exec, hyprlock
 bind = $mainMod, Q, killactive,
@@ -300,7 +303,9 @@ bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+#bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+#bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -312,8 +317,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
+# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
@@ -332,5 +337,5 @@ windowrule = workspace 7 silent, class:^(discord)$
 windowrule = workspace 8 silent, class:^(Spotify)$
 windowrule = workspace 9 silent, class:^(steam)$
 windowrule = workspace 10 silent, class:^(firefox)$
-windowrule = workspace 10 silent, class:^(Brave-browser)$
-windowrule = workspace 10 silent, class:^(Google-chrome)$
+windowrule = workspace 10 silent, class:^(brave-browser)$
+windowrule = workspace 10 silent, class:^(google-chrome)$
