--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -17,6 +17,7 @@
   ],
   "hyprland/workspaces": {
     "format": " {icon} ",
+    "on-click": "activate",
     "format-icons": {
       "1": "",
       "2": "",
@@ -28,6 +29,7 @@
       "10": "",
       "default": "",
     },
+    "sort-by-number": true,
     "persistent-workspaces": {
       "*": [1, 2, 3, 6, 7, 8, 9, 10],
     },
