--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 copy-on-select = clipboard
 font-family = FiraCode Nerd Font Mono
 mouse-hide-while-typing = true
-theme = catppuccin-mocha
+theme = Catppuccin Mocha
 window-decoration = auto
 app-notifications = no-clipboard-copy
 cursor-opacity = 0.6
