--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -330,11 +330,13 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = workspace 1 silent, class:^(com.mitchellh.ghostty)$
+windowrule = workspace 2 silent, class:^(nemo)$
 windowrule = workspace 2 silent, class:^(org.gnome.Nautilus)$
+windowrule = workspace 2 silent, class:^(org.kde.dolphin)$
 windowrule = workspace 3 silent, class:^(org.telegram.desktop)$
 windowrule = workspace 6 silent, class:^(vlc)$
 windowrule = workspace 7 silent, class:^(discord)$
-windowrule = workspace 8 silent, class:^(Spotify)$
+windowrule = workspace 8 silent, class:^(spotify)$
 windowrule = workspace 9 silent, class:^(steam)$
 windowrule = workspace 10 silent, class:^(firefox)$
 windowrule = workspace 10 silent, class:^(brave-browser)$
