--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,9 +39,9 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = systemctl --user enable --now hyprpolkitagent.service
-exec-once = systemctl --user enable --now hypridle.service
-exec-once = systemctl --user enable --now hyprpaper.service
+exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
+exec-once = hypridle
+exec-once = hyprpaper
 exec-once = hyprctl setcursor capitaine-cursors 24
 exec-once = waybar
 exec-once = swaync
@@ -324,20 +324,20 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
 
-windowrule = workspace 1 silent, class:^(com.mitchellh.ghostty)$
-windowrule = workspace 2 silent, class:^(nemo)$
-windowrule = workspace 2 silent, class:^(org.gnome.Nautilus)$
-windowrule = workspace 2 silent, class:^(org.kde.dolphin)$
-windowrule = workspace 3 silent, class:^(org.telegram.desktop)$
-windowrule = workspace 6 silent, class:^(vlc)$
-windowrule = workspace 7 silent, class:^(discord)$
-windowrule = workspace 8 silent, class:^(spotify)$
-windowrule = workspace 9 silent, class:^(steam)$
-windowrule = workspace 10 silent, class:^(firefox)$
-windowrule = workspace 10 silent, class:^(brave-browser)$
-windowrule = workspace 10 silent, class:^(google-chrome)$
+windowrule = match:class ^(com.mitchellh.ghostty)$, workspace 1 silent
+windowrule = match:class ^(nemo)$, workspace 2 silent
+windowrule = match:class ^(org.gnome.Nautilus)$, workspace 2 silent
+windowrule = match:class ^(org.kde.dolphin)$, workspace 2 silent
+windowrule = match:class ^(org.telegram.desktop)$, workspace 3 silent
+windowrule = match:class ^(vlc)$, workspace 6 silent
+windowrule = match:class ^(discord)$, workspace 7 silent
+windowrule = match:class ^(spotify)$, workspace 8 silent
+windowrule = match:class ^(steam)$, workspace 9 silent
+windowrule = match:class ^(firefox)$, workspace 10 silent
+windowrule = match:class ^(brave-browser)$, workspace 10 silent
+windowrule = match:class ^(google-chrome)$, workspace 10 silent
